- 30th Nov 2023 fixes and enhancements: * Fixed incorrect layout of text rows in site edit mode. Image was not rendered and change of column width did not provide visual feedback. * Column can now be temporarily toggled to full width in site edit mode, in order to aid viewing when a column is narrow. Click the arrow to the right of the column width field to toggle expand/collapse. This has no effect on the saved column width value. * Column width can now be edited on nested columns within nested rows. Previously this was fixed. * Date filtering now works correctly when choosing the link to walk option on individual album images, or when choosing a link to a walk or social at the album level. * From/To Date pickers are also provided as part of the group event selection view in order to home in on a specific range of events to choose from. * When an event is selected for linking, the from/to date is automatically chosen to be 2 weeks either side of the linked event. * Dynamic content pages now correctly detect when a path is chosen that doesn’t exist. if site edit is active, the option is given to create content at this path, alternatively an alert is displayed saying the page could not be found. * Navigating to the single walk view for an event in the past now works correctly. Previously no walk was displayed at all.

--- a/projects/ngx-ramblers/src/app/markdown-editor/markdown-editor.component.html
+++ b/projects/ngx-ramblers/src/app/markdown-editor/markdown-editor.component.html
@@ -45,6 +45,6 @@
 <textarea *ngIf="editorState.view==='edit'"
           [(ngModel)]="content.text"
           (ngModelChange)="changeText($event)"
-          class="form-control markdown-textarea" rows="{{rows}}"
+          class="form-control markdown-textarea" [rows]="rows"
           placeholder="Enter {{description}} text here">
 </textarea>
