--- a/projects/ngx-ramblers/src/app/pages/walks/walk-list/walk-list.component.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-list/walk-list.component.html
@@ -80,8 +80,8 @@
                                     name="contactPhone"
                                     tooltip="Click to ring {{displayedWalk.walk.displayName}} on {{viewWalkField(displayedWalk, 'contactPhone')}} (mobile devices only)"
                                     placement="left"></span></a>
-              <app-panel-expander class="d-none d-lg-inline" [walk]="displayedWalk.walk" [expandable]="true">
-              </app-panel-expander>
+              <app-walk-panel-expander class="d-none d-lg-inline" [walk]="displayedWalk.walk" [expandable]="true">
+              </app-walk-panel-expander>
             </td>
           </tr>
           </tbody>
