- 5th Dec 2023: * Album settings now grouped into tabs as there were too many settings that needed to be paged through beforehand. Now settings are grouped into the following tabs:   * Titles and Event Linking   * Cover Image and introductory text   * Pre-Album Text   * Album Settings * When album view mode is changed in site edit mode, preview changes in realtime. Previously, view would remain set at previously saved value. * Carousel now has a height setting.  If entered, this causes images to be centred around this height * List of walk leaders can now be queried based on all walk history. This is only reliable if walk leaders have been entered in walks manager or local walk population is configured. * Walk leaders will eventually allow email notifications to be sent out to only members that have led or are due to lead at least 1 walk. Currently this only provides a filter in member admin * Markdown editor fields now automatically increase in height if newlines are manually entered when in site edit mode.

--- a/projects/ngx-ramblers/src/app/carousel/view/carousel.html
+++ b/projects/ngx-ramblers/src/app/carousel/view/carousel.html
@@ -11,8 +11,12 @@
                 [(activeSlide)]="lazyLoadingMetadata.activeSlideIndex"
                 (activeSlideChange)="activeSlideChange(false, $event)">
         <slide *ngFor="let slide of lazyLoadingMetadata?.selectedSlides">
-          <img class="img-fluid w-100" loading="lazy" *ngIf="slide" [src]="imageSourceFor(slide)"
-               [alt]="slide.text">
+          <img loading="lazy" *ngIf="slide" [src]="imageSourceFor(slide)"
+               [alt]="slide.text" [ngStyle]="{'height.px': album.height,
+                'min-width': '100%',
+                 'max-width': '100%',
+                 'object-fit': 'cover',
+                 'object-position': 'center'}">
           <div class="carousel-caption">
             <h4>{{slide.text}}</h4>
             <div *ngIf="slide.eventId">
