- 6th Dec 2023 bug fixes and enhancements: * For EKWG only:   * Fixed incorrect walk export time (was showing 9 am for 10 am walk) - identified 9 walks with walk date of 1:00 am and 13 that had time of 11:00 pm   * Performed automated update on these walks. (for technical reasons the walk date should always be exactly 12:00 pm) * Fixed walk slot creation logic to ensure that time is removed from slot walk date and that there are no duplicate dates * Constrained all date pickers to ensure manually input dates are saved with no time added to them * User Interface enhancements:   * Added missing titles to member admin views that had none   * Added Ramblers Membership Number and Ramblers Membership Expiry Date to /admin/contact-details (readonly values only)

--- a/projects/ngx-ramblers/src/app/carousel/edit/image-edit/image-edit.html
+++ b/projects/ngx-ramblers/src/app/carousel/edit/image-edit/image-edit.html
@@ -71,7 +71,7 @@
           </div>
           <div class="col-sm-7 no-left-padding">
             <div class="form-group no-left-padding">
-              <app-date-picker [label]="'Image Date'"
+              <app-date-picker startOfDay [label]="'Image Date'"
                                [size]="'md'"
                                (dateChange)="dateChange($event)"
                                [value]="item?.date"/>
