--- a/projects/ngx-ramblers/src/app/pages/admin/profile/email-subscriptions.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/profile/email-subscriptions.component.html
@@ -1,9 +1,8 @@
-<app-page>
-  <div class="row img-thumbnail" *ngIf="member">
+<app-page autoTitle>
+  <div class="row" *ngIf="member">
     <div class="col-sm-3">
       <div class="item-panel-heading">
         <fa-icon [icon]="faEnvelopeOpenText" class="fa-5x ramblers"></fa-icon>
-        <h5>Email subscriptions</h5>
       </div>
     </div>
     <div class="col col-sm-9">
