--- a/projects/ngx-ramblers/src/app/pages/admin/system-settings/mailchimp/mailchimp-settings.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/system-settings/mailchimp/mailchimp-settings.html
@@ -1,4 +1,4 @@
-<app-page>
+<app-page autoTitle>
   <div class="row">
     <div class="col-sm-12">
       <tabset class="custom-tabset" *ngIf="mailchimpConfig">
