--- a/projects/ngx-ramblers/src/app/pages/social/edit/social-edit.component.html
+++ b/projects/ngx-ramblers/src/app/pages/social/edit/social-edit.component.html
@@ -18,7 +18,7 @@
           <div class="row">
             <div class="col-sm-6">
               <div class="form-group">
-                <app-date-picker [label]="'Social Event Date'"
+                <app-date-picker startOfDay [label]="'Social Event Date'"
                                  [size]="'md'"
                                  (dateChange)="eventDateChanged($event)"
                                  [value]="eventDate">
