--- a/projects/ngx-ramblers/src/app/pages/walks/walk-edit/walk-edit.component.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-edit/walk-edit.component.html
@@ -12,7 +12,7 @@
           <div class="col-sm-6">
             <div class="form-group">
               <label for="walk-date">Walk Date</label>
-              <app-date-picker id="walk-date" size="md"
+              <app-date-picker startOfDay id="walk-date" size="md"
                                placeholder="enter date of walk"
                                [disabled]="!allowAdminEdits() || !allowEdits()"
                                class="w-100"
