--- a/projects/ngx-ramblers/src/app/date-picker/date-picker.component.html
+++ b/projects/ngx-ramblers/src/app/date-picker/date-picker.component.html
@@ -2,7 +2,7 @@
   <label class="ml-2" *ngIf="label && !prependLabel" [for]="id">{{label}}</label>
   <div class="input-group">
     <div *ngIf="label && prependLabel" class="input-group-prepend">
-      <span class="input-group-text" (click)="dp.toggle()" [attr.aria-expanded]="dp.isOpen">{{label}}:</span>
+      <span class="input-group-text" [attr.aria-expanded]="dp.isOpen">{{label}}:</span>
     </div>
     <input [ngModel]="dateValue?.date"
            [id]="id"
