--- a/projects/ngx-ramblers/src/app/page/page.component.html
+++ b/projects/ngx-ramblers/src/app/page/page.component.html
@@ -1,6 +1,6 @@
 <main>
   <div class="container">
-    <ul *ngIf="pageService.nested()" class="breadcrumb bg-transparent">
+    <ul *ngIf="pageService.nested()" class="breadcrumb bg-transparent mb-1 ml-0 p-1">
       <span class="d-md-none">...</span>
       <li class="breadcrumb-item d-none d-md-inline" *ngFor="let page of pageService.relativePages()">
         <a [routerLink]="'/' + page?.href" target="_self">{{page?.title}}</a>
