--- a/projects/ngx-ramblers/src/app/pages/admin/expenses/expenses.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/expenses/expenses.component.html
@@ -1,8 +1,8 @@
-<app-page>
+<app-page autoTitle>
   <div class="hidden">
     <ng-template app-expense-notification-template></ng-template>
   </div>
-  <div class="img-thumbnail p-3">
+  <div class="p-3">
     <div class="float-right pr-3">
       <fa-icon *ngIf="expandable" [attr.aria-expanded]="!expandable"
                (click)="expand()"
