--- a/projects/ngx-ramblers/src/app/pages/admin/profile/change-password.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/profile/change-password.component.html
@@ -1,10 +1,9 @@
 <app-page autoTitle>
-  <div class="row img-thumbnail">
+  <div class="row">
     <div class="col-sm-3">
       <div class="item-panel-heading">
         <fa-icon [icon]="faUnlockAlt" class="fa-5x ramblers"></fa-icon>
-        <h5>Change password</h5>
-        <h6>And change login user name</h6>
+        <h6>And optionally change login user name</h6>
       </div>
     </div>
     <div class="col col-sm-9">
