--- a/projects/ngx-ramblers/src/app/pages/committee/send-notification/committee-send-notification.component.html
+++ b/projects/ngx-ramblers/src/app/pages/committee/send-notification/committee-send-notification.component.html
@@ -213,7 +213,7 @@
               <div class="col-sm-4">
                 <div class="form-group">
                   <label for="from-date">Include Events From:</label>
-                  <app-date-picker id="from-date"
+                  <app-date-picker startOfDay id="from-date"
                                    [size]="'md round'"
                                    (dateChange)="onFromDateChange($event)"
                                    [value]="this.notification.groupEventsFilter.fromDate">
@@ -221,7 +221,7 @@
                 </div>
                 <div class="form-group">
                   <label for="to-date">Include Events To:</label>
-                  <app-date-picker id="to-date"
+                  <app-date-picker startOfDay id="to-date"
                                    [size]="'md round'"
                                    (dateChange)="onToDateChange($event)"
                                    [value]="this.notification.groupEventsFilter.toDate">
